MakePluginPlus : Support rename-variable

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,6 +1,6 @@
 ---
 add-backslash:        true
-rename-localvariable: true
+rename-variable:      true
 remove-whitespace:    true
 skip-metadata:        true
 skip-stub:            true
