--- a/resources/config.yml
+++ b/resources/config.yml
@@ -5,5 +5,6 @@ remove-comment:       true
 remove-whitespace:    true
 skip-metadata:        true
 skip-stub:            true
+include-minimal:      true
 compress:             true
 ...
