--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name:             MakePluginPlus
 main:             presentkim\makepluginplus\MakePluginPlus
 version:          1.0.0
-api:              [3.0.0, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
+api:              [3.0.0, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
 author:           PresentKim
 website:          https://github.com/PMMPPlugin/MakePluginPlus
 description:      A plugin for make plugin with more option
