--- a/plugin.yml
+++ b/plugin.yml
@@ -5,7 +5,7 @@ version:          1.0.0
 api:              [3.0.0, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
 author:           PresentKim
 website:          https://github.com/PresentKim/MakePluginPlus-PMMP
-description:      A plugin for make plugin with more option
+description:     Make plugin with more option (more optimize)
 depend:           ['DevTools']
 
 permissions:
