--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name: MakePluginPlus
 main: kim\present\makepluginplus\MakePluginPlus
 version: 1.0.0
-api: [3.0.0, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
+api: [3.0.0, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12, 4.0.0]
 author: PresentKim
 website: https://github.com/PresentKim/MakePluginPlus-PMMP
 description: Make plugin with more option (more optimize)
