--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name: MakePluginPlus
 main: kim\present\makepluginplus\MakePluginPlus
 version: 1.1.0
-api: [3.0.0, 4.0.0]
+api: [4.0.0]
 author: PresentKim
 description: Make plugin with more option (more optimize)
 depend: ['DevTools']
