--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 ---
 name: MakePluginPlus
-main: kim\present\makepluginplus\MakePluginPlus
+main: blugin\makepluginplus\MakePluginPlus
 version: 1.1.0
 api: [4.0.0]
 author: PresentKim
