Support 'remove-import' :
Add ImportRemovingVisitor

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -3,6 +3,7 @@ code-optimize: true
 rename-variable: true
 remove-comment: true
 remove-whitespace: true
+remove-import: true
 skip-metadata: true
 skip-stub: true
 include-minimal: true
