--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name: BluginBuilder
 main: blugin\tool\builder\BluginBuilder
 version: 0.0.1
-api: [4.0.0]
+api: [3.0.0, 4.0.0]
 authors: ['Blugin-team', 'PresentKim']
 description: '[tool] Plugin builder plugin for Blugin-team'
 depend: ['DevTools', 'libPhpParser']
