--- a/plugin.yml
+++ b/plugin.yml
@@ -5,7 +5,7 @@ version: 2.0.2
 api: [3.0.0, 4.0.0]
 authors: ['Blugin-team', 'PresentKim']
 description: '[tool] Plugin builder plugin for Blugin-team'
-depend: ['DevTools', 'libPhpParser']
+depend: ['DevTools']
 
 commands:
   bluginbuilder:
