--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 ---
 name: BluginTools
 main: blugin\tool\blugintools\BluginTools
-version: 2.1.0
-api: [3.0.0]
+version: 2.1.0-API4
+api: [4.0.0]
 authors: ['Blugin-team', 'PresentKim']
 description: '[tool] Several tools to help with pmmp plugin development'
 load: STARTUP
