--- a/resources/config.yml
+++ b/resources/config.yml
@@ -38,7 +38,7 @@ preprocessing:
 build:
   #Code output format setting
   #Modes Supported : standard(Default code style), shorten(Short code style)
-  print-format: standard
+  print-format: [standard]
 
   #Set whether to include only minimal files
   include-minimal: true
