--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,4 +1,4 @@
-# Advanced configuration file for BluginBuilder plugin
+# Advanced configuration file for refBun plugin
 # Some of these settings are safe, others can break your server if modified incorrectly
 # New settings/defaults won't appear automatically on this file when upgrading
 
